# Sagger

./: CMakeLists.txt  README.md  cli.c  cli.h  fpcalc.c  fpcalc.h  gtk.c  gtk.h  json.c  json.h  main.c  run.c  run.h  structures.h
