cmake_minimum_required(VERSION 3.15)
project(Sagger LANGUAGES C VERSION 0.1)
set(CMAKE_C_STANDARD 11)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK_LIBRARY_DIRS})
ADD_DEFINITIONS(${GTK_CFLAGS_OTHER})

PKG_CHECK_MODULES(JSON REQUIRED json-glib-1.0)
INCLUDE_DIRECTORIES(${JSON_INCLUDE_DIRS})
LINK_DIRECTORIES(${JSON_LIBRARY_DIRS})

FIND_PACKAGE(CURL REQUIRED)
INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIRS})

ADD_EXECUTABLE(Sagger main.c fpcalc.c fpcalc.h run.c run.h structures.h json.c json.h gtk.c gtk.h cli.c cli.h)
TARGET_LINK_LIBRARIES(Sagger ${GTK3_LIBRARIES} ${JSON_LIBRARIES} ${CURL_LIBRARIES})